<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".NotCompletedTodoActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="109dp"
        android:layout_height="95dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/image_logo_description"
        android:src="@drawable/todoboom_logo"
        app:layout_constraintBottom_toTopOf="@id/todo_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title"
        android:textColor="@color/white"
        android:textSize="9pt"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="9pt"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_title" />

    <TextView
        android:id="@+id/was_created_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/was_created"
        android:textColor="@color/pink"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo" />

    <TextView
        android:id="@+id/was_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="@+id/was_created_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/last_modified"
        app:layout_constraintTop_toTopOf="@id/was_created_title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/last_modified_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/last_modified"
        android:textColor="@color/pink"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/was_created_title" />

    <TextView
        android:id="@+id/last_modified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="@+id/last_modified_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/last_modified_title"
        app:layout_constraintTop_toTopOf="@id/last_modified_title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/edit_todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/edit_your_task"
        android:textColor="@color/pink"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_modified_title" />

    <EditText
        android:id="@+id/input_field_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/edit_your_todo"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/pink_dark"
        android:textSize="8pt"
        app:layout_constraintEnd_toStartOf="@+id/apply_edit_button"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_todo_title" />

    <Button
        android:id="@+id/apply_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:backgroundTint="@color/pink"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="@+id/input_field_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_field_edit"
        android:onClick="applyEditButtonOnClick"/>

    <Button
        android:id="@+id/mark_as_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/pink"
        android:text="@string/mark_todo_as_done"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_field_edit"
        android:onClick="markAsDoneButtonOnClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>
