<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="109dp"
        android:layout_height="95dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/image_logo_description"
        android:src="@drawable/todoboom_logo"
        app:layout_constraintBottom_toTopOf="@id/text_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_list_title"
        android:textColor="@color/white"
        android:textSize="9pt"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tasks"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="70dp"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:textSize="8pt"/>

    <EditText
        android:id="@+id/input_field"
        android:layout_width="250dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_marginTop="05dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_input_task"
        android:textAlignment="center"
        android:textSize="8pt"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:textColorLink="@color/pink_dark"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        android:autofillHints="Enter a task" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_task"
        android:backgroundTint="@color/pink"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="@+id/input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_field"/>


</androidx.constraintlayout.widget.ConstraintLayout>